--- a/e/systemd/enlightenment.service
+++ b/e/systemd/enlightenment.service
@@ -1,5 +1,5 @@
 [Unit]
-Before=aura-oneshot.service xinput.service
+Before=aura-oneshot.service xsettings.service
 
 [Service]
 ExecStart=/usr/bin/enlightenment_start
