--- a/e/systemd/enlightenment.service
+++ b/e/systemd/enlightenment.service
@@ -3,4 +3,4 @@ Before=aura-oneshot.service xsettings.service
 
 [Service]
 ExecStart=/usr/bin/enlightenment_start
-ExecStopPost=-/usr/bin/systemctl --fail --no-block --user exit
+ExecStopPost=-/usr/bin/pkill -INT -U 1000 -x systemd
