e.systemd: proper syslog identifiers for units, +app@

--- a/e/systemd/aura.service
+++ b/e/systemd/aura.service
@@ -2,4 +2,5 @@
 After=aura-oneshot.service
 
 [Service]
+SyslogIdentifier=%p
 ExecStart=/usr/bin/env aura -d --no-fork --no-init /mnt/volatiles/images ${HOME}/media/bgz
