--- a/e/systemd/logtail_notify.service
+++ b/e/systemd/logtail_notify.service
@@ -1,2 +1,3 @@
 [Service]
+SyslogIdentifier=%p
 ExecStart=/usr/bin/env logtail_notify -i ${HOME}/media/appz/icons/biohazard_48x.png -x ${XDG_RUNTIME_DIR}/logtail_notify.db /var/log/syslog/stripped.log
