systemd.e: quit after e is dead, but only if special file is there

--- a/e/systemd/enlightenment.service
+++ b/e/systemd/enlightenment.service
@@ -5,3 +5,4 @@ Before=aura-oneshot.service xsettings.service
 SyslogIdentifier=%p
 KillMode=none
 ExecStart=/usr/bin/env enlightenment_start
+ExecStopPost=-/bin/sh -c 'test -e "$HOME"/.e/logout_after && /usr/bin/env pkill -INT -U 1000 -x systemd'
