e.cfg: strip include transient filenames

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -299,7 +299,7 @@ group "E_Config" struct {
     }
     group "desklock_backgrounds" list {
         group "E_Config_Desklock_Background" struct {
-            value "file" string: "/tmp/.lqr_wpset_bg.klfTvZ.png";
+            value "file" string: "/tmp/bg.png";
         }
     }
     group "shelves" list {
@@ -8283,42 +8283,42 @@ group "E_Config" struct {
             value "zone" int: 0;
             value "desk_x" int: 0;
             value "desk_y" int: 0;
-            value "file" string: "/tmp/.lqr_wpset_bg.M93L_E.png";
+            value "file" string: "/tmp/bg.png";
         }
         group "E_Config_Desktop_Background" struct {
             value "container" int: 0;
             value "zone" int: 0;
             value "desk_x" int: 1;
             value "desk_y" int: 0;
-            value "file" string: "/tmp/.lqr_wpset_bg.M93L_E.png";
+            value "file" string: "/tmp/bg.png";
         }
         group "E_Config_Desktop_Background" struct {
             value "container" int: 0;
             value "zone" int: 0;
             value "desk_x" int: 2;
             value "desk_y" int: 0;
-            value "file" string: "/tmp/.lqr_wpset_bg.M93L_E.png";
+            value "file" string: "/tmp/bg.png";
         }
         group "E_Config_Desktop_Background" struct {
             value "container" int: 0;
             value "zone" int: 0;
             value "desk_x" int: 3;
             value "desk_y" int: 0;
-            value "file" string: "/tmp/.lqr_wpset_bg.M93L_E.png";
+            value "file" string: "/tmp/bg.png";
         }
         group "E_Config_Desktop_Background" struct {
             value "container" int: 0;
             value "zone" int: 0;
             value "desk_x" int: 4;
             value "desk_y" int: 0;
-            value "file" string: "/tmp/.lqr_wpset_bg.M93L_E.png";
+            value "file" string: "/tmp/bg.png";
         }
         group "E_Config_Desktop_Background" struct {
             value "container" int: 0;
             value "zone" int: 0;
             value "desk_x" int: 5;
             value "desk_y" int: 0;
-            value "file" string: "/tmp/.lqr_wpset_bg.M93L_E.png";
+            value "file" string: "/tmp/bg.png";
         }
     }
     value "config_version" int: 1000000;
