e.cfg: version bump

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -1831,7 +1831,7 @@ group "E_Config" struct {
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 357;
-            value "prop.pos_w" int: 416;
+            value "prop.pos_w" int: 415;
             value "prop.pos_x" int: 13;
             value "prop.pos_y" int: 61;
             value "prop.res_x" int: 1366;
@@ -1841,7 +1841,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 416;
+            value "prop.w" int: 415;
             value "prop.zone" int: 0;
             value "transient" uchar: 0;
             value "type" int: 8;
@@ -8270,6 +8270,13 @@ group "E_Config" struct {
             value "z" int: 1;
         }
     }
+    group "xkb.current_layout" struct {
+        group "E_Config_XKB_Layout" struct {
+            value "model" string: "default";
+            value "name" string: "us";
+            value "variant" string: "basic";
+        }
+    }
     group "xkb.used_layouts" list {
         group "E_Config_XKB_Layout" struct {
             value "model" string: "default";
@@ -8321,7 +8328,7 @@ group "E_Config" struct {
     value "clientlist_sort_by" int: 2;
     value "clientlist_warp_to_iconified_desktop" int: 0;
     value "cnfmdlg_disabled" int: 0;
-    value "config_version" int: 1000000;
+    value "config_version" int: 1000007;
     value "cursor_size" int: 32;
     value "default_system_menu" string: "/usr/etc/xdg/menus/enlightenment.menu";
     value "desk_auto_switch" int: 0;
