e.cfg: use properties interface for notification-thing dbus controls

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -607,7 +607,7 @@ group "E_Config" struct {
             value "context" int: 9;
             value "key" string: "Print";
             value "modifiers" int: 0;
-            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Set dict:string:boolean:plug_toggle,true";
+            value "params" string: "dbus-send --session --print-reply --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.DBus.Properties.Set string:org.freedesktop.Notifications string:plug variant:string:toggle";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "volume_decrease";
@@ -729,7 +729,7 @@ group "E_Config" struct {
             value "context" int: 9;
             value "key" string: "Print";
             value "modifiers" int: 1;
-            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Set dict:string:boolean:cleanup_toggle,true";
+            value "params" string: "dbus-send --session --print-reply --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.DBus.Properties.Set string:org.freedesktop.Notifications string:cleanup variant:string:toggle";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "logout";
@@ -783,6 +783,14 @@ group "E_Config" struct {
             value "key" string: "Menu";
             value "modifiers" int: 2;
             value "params" string: "clients";
+        }
+        group "E_Config_Binding_Key" struct {
+            value "action" string: "exec";
+            value "any_mod" uchar: 0;
+            value "context" int: 9;
+            value "key" string: "Pause";
+            value "modifiers" int: 2;
+            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Cleanup double:2.0";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "screen_send_to";
@@ -1930,7 +1938,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 743;
+            value "prop.h" int: 219;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -1958,8 +1966,8 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 768;
-            value "prop.pos_w" int: 1366;
+            value "prop.pos_h" int: 244;
+            value "prop.pos_w" int: 14;
             value "prop.pos_x" int: 0;
             value "prop.pos_y" int: 0;
             value "prop.res_x" int: 1366;
@@ -1969,7 +1977,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 1364;
+            value "prop.w" int: 12;
             value "prop.zone" int: 0;
             value "role" string: "browser";
             value "transient" uchar: 0;
@@ -2029,6 +2037,63 @@ group "E_Config" struct {
             value "prop.w" int: 203;
             value "prop.zone" int: 0;
             value "transient" uchar: 1;
+            value "type" int: 7;
+        }
+        group "E_Remember" struct {
+            value "apply" int: 65;
+            value "apply_first_only" uchar: 0;
+            value "class" string: "Firefox";
+            value "keep_settings" uchar: 0;
+            value "match" int: 51;
+            value "max_score" int: 0;
+            value "name" string: "Dialog";
+            value "no_reopen" int: 0;
+            value "prop.command" string: "firefox";
+            value "prop.desk_x" int: 1;
+            value "prop.desk_y" int: 0;
+            value "prop.fullscreen" uchar: 0;
+            value "prop.h" int: 137;
+            value "prop.head" int: 0;
+            value "prop.icon_preference" uchar: 0;
+            value "prop.layer" int: 100;
+            value "prop.lock_border" uchar: 0;
+            value "prop.lock_client_desk" uchar: 0;
+            value "prop.lock_client_fullscreen" uchar: 0;
+            value "prop.lock_client_iconify" uchar: 0;
+            value "prop.lock_client_location" uchar: 0;
+            value "prop.lock_client_maximize" uchar: 0;
+            value "prop.lock_client_shade" uchar: 0;
+            value "prop.lock_client_size" uchar: 0;
+            value "prop.lock_client_stacking" uchar: 0;
+            value "prop.lock_client_sticky" uchar: 0;
+            value "prop.lock_close" uchar: 0;
+            value "prop.lock_focus_in" uchar: 0;
+            value "prop.lock_focus_out" uchar: 0;
+            value "prop.lock_life" uchar: 0;
+            value "prop.lock_user_desk" uchar: 0;
+            value "prop.lock_user_fullscreen" uchar: 0;
+            value "prop.lock_user_iconify" uchar: 0;
+            value "prop.lock_user_location" uchar: 0;
+            value "prop.lock_user_maximize" uchar: 0;
+            value "prop.lock_user_shade" uchar: 0;
+            value "prop.lock_user_size" uchar: 0;
+            value "prop.lock_user_stacking" uchar: 0;
+            value "prop.lock_user_sticky" uchar: 0;
+            value "prop.offer_resistance" uchar: 1;
+            value "prop.pos_h" int: 137;
+            value "prop.pos_w" int: 383;
+            value "prop.pos_x" int: 415;
+            value "prop.pos_y" int: 338;
+            value "prop.res_x" int: 1366;
+            value "prop.res_y" int: 768;
+            value "prop.shaded" uchar: 50;
+            value "prop.skip_pager" uchar: 0;
+            value "prop.skip_taskbar" uchar: 0;
+            value "prop.skip_winlist" uchar: 0;
+            value "prop.sticky" uchar: 0;
+            value "prop.w" int: 383;
+            value "prop.zone" int: 0;
+            value "transient" uchar: 0;
             value "type" int: 7;
         }
         group "E_Remember" struct {
@@ -2155,7 +2220,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 0;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 427;
+            value "prop.h" int: 398;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -2183,10 +2248,10 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 427;
+            value "prop.pos_h" int: 398;
             value "prop.pos_w" int: 351;
-            value "prop.pos_x" int: 574;
-            value "prop.pos_y" int: 198;
+            value "prop.pos_x" int: 905;
+            value "prop.pos_y" int: 164;
             value "prop.res_x" int: 1366;
             value "prop.res_y" int: 768;
             value "prop.shaded" uchar: 0;
@@ -4425,7 +4490,7 @@ group "E_Config" struct {
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 576;
             value "prop.pos_w" int: 683;
-            value "prop.pos_x" int: 499;
+            value "prop.pos_x" int: 19;
             value "prop.pos_y" int: 168;
             value "prop.res_x" int: 1366;
             value "prop.res_y" int: 768;
@@ -6552,7 +6617,7 @@ group "E_Config" struct {
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 57;
-            value "prop.pos_w" int: 224;
+            value "prop.pos_w" int: 221;
             value "prop.pos_x" int: 600;
             value "prop.pos_y" int: 343;
             value "prop.res_x" int: 1366;
@@ -6562,7 +6627,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 224;
+            value "prop.w" int: 221;
             value "prop.zone" int: 0;
             value "transient" uchar: 1;
             value "type" int: 7;
@@ -7968,6 +8033,64 @@ group "E_Config" struct {
             value "prop.w" int: 409;
             value "prop.zone" int: 0;
             value "transient" uchar: 1;
+            value "type" int: 7;
+        }
+        group "E_Remember" struct {
+            value "apply" int: 71;
+            value "apply_first_only" uchar: 0;
+            value "class" string: "Firefox";
+            value "keep_settings" uchar: 0;
+            value "match" int: 55;
+            value "max_score" int: 0;
+            value "name" string: "Dialog";
+            value "no_reopen" int: 0;
+            value "prop.command" string: "firefox";
+            value "prop.desk_x" int: 1;
+            value "prop.desk_y" int: 0;
+            value "prop.fullscreen" uchar: 0;
+            value "prop.h" int: 137;
+            value "prop.head" int: 0;
+            value "prop.icon_preference" uchar: 0;
+            value "prop.layer" int: 150;
+            value "prop.lock_border" uchar: 0;
+            value "prop.lock_client_desk" uchar: 0;
+            value "prop.lock_client_fullscreen" uchar: 0;
+            value "prop.lock_client_iconify" uchar: 0;
+            value "prop.lock_client_location" uchar: 0;
+            value "prop.lock_client_maximize" uchar: 0;
+            value "prop.lock_client_shade" uchar: 0;
+            value "prop.lock_client_size" uchar: 0;
+            value "prop.lock_client_stacking" uchar: 0;
+            value "prop.lock_client_sticky" uchar: 0;
+            value "prop.lock_close" uchar: 0;
+            value "prop.lock_focus_in" uchar: 0;
+            value "prop.lock_focus_out" uchar: 0;
+            value "prop.lock_life" uchar: 0;
+            value "prop.lock_user_desk" uchar: 0;
+            value "prop.lock_user_fullscreen" uchar: 0;
+            value "prop.lock_user_iconify" uchar: 0;
+            value "prop.lock_user_location" uchar: 0;
+            value "prop.lock_user_maximize" uchar: 0;
+            value "prop.lock_user_shade" uchar: 0;
+            value "prop.lock_user_size" uchar: 0;
+            value "prop.lock_user_stacking" uchar: 0;
+            value "prop.lock_user_sticky" uchar: 0;
+            value "prop.offer_resistance" uchar: 0;
+            value "prop.pos_h" int: 137;
+            value "prop.pos_w" int: 383;
+            value "prop.pos_x" int: 490;
+            value "prop.pos_y" int: 290;
+            value "prop.res_x" int: 1366;
+            value "prop.res_y" int: 768;
+            value "prop.shaded" uchar: 0;
+            value "prop.skip_pager" uchar: 0;
+            value "prop.skip_taskbar" uchar: 0;
+            value "prop.skip_winlist" uchar: 0;
+            value "prop.sticky" uchar: 0;
+            value "prop.w" int: 383;
+            value "prop.zone" int: 0;
+            value "title" string: "Password Required";
+            value "transient" uchar: 0;
             value "type" int: 7;
         }
         group "E_Remember" struct {
