e.cfg: more win-remembers

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -1938,7 +1938,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 219;
+            value "prop.h" int: 394;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -1966,8 +1966,8 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 244;
-            value "prop.pos_w" int: 14;
+            value "prop.pos_h" int: 419;
+            value "prop.pos_w" int: 1372;
             value "prop.pos_x" int: 0;
             value "prop.pos_y" int: 0;
             value "prop.res_x" int: 1366;
@@ -1977,9 +1977,68 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 12;
+            value "prop.w" int: 1370;
             value "prop.zone" int: 0;
             value "role" string: "browser";
+            value "transient" uchar: 0;
+            value "type" int: 8;
+        }
+        group "E_Remember" struct {
+            value "apply" int: 4;
+            value "apply_first_only" uchar: 0;
+            value "class" string: "Firefox";
+            value "keep_settings" uchar: 0;
+            value "match" int: 31;
+            value "max_score" int: 0;
+            value "name" string: "Global";
+            value "no_reopen" int: 0;
+            value "prop.command" string: "firefox";
+            value "prop.desk_x" int: 0;
+            value "prop.desk_y" int: 0;
+            value "prop.fullscreen" uchar: 0;
+            value "prop.h" int: 0;
+            value "prop.head" int: 0;
+            value "prop.icon_preference" uchar: 0;
+            value "prop.layer" int: 50;
+            value "prop.lock_border" uchar: 0;
+            value "prop.lock_client_desk" uchar: 0;
+            value "prop.lock_client_fullscreen" uchar: 0;
+            value "prop.lock_client_iconify" uchar: 0;
+            value "prop.lock_client_location" uchar: 0;
+            value "prop.lock_client_maximize" uchar: 0;
+            value "prop.lock_client_shade" uchar: 0;
+            value "prop.lock_client_size" uchar: 0;
+            value "prop.lock_client_stacking" uchar: 0;
+            value "prop.lock_client_sticky" uchar: 0;
+            value "prop.lock_close" uchar: 0;
+            value "prop.lock_focus_in" uchar: 0;
+            value "prop.lock_focus_out" uchar: 0;
+            value "prop.lock_life" uchar: 0;
+            value "prop.lock_user_desk" uchar: 0;
+            value "prop.lock_user_fullscreen" uchar: 0;
+            value "prop.lock_user_iconify" uchar: 0;
+            value "prop.lock_user_location" uchar: 0;
+            value "prop.lock_user_maximize" uchar: 0;
+            value "prop.lock_user_shade" uchar: 0;
+            value "prop.lock_user_size" uchar: 0;
+            value "prop.lock_user_stacking" uchar: 0;
+            value "prop.lock_user_sticky" uchar: 0;
+            value "prop.offer_resistance" uchar: 0;
+            value "prop.pos_h" int: 0;
+            value "prop.pos_w" int: 0;
+            value "prop.pos_x" int: 0;
+            value "prop.pos_y" int: 0;
+            value "prop.res_x" int: 0;
+            value "prop.res_y" int: 0;
+            value "prop.shaded" uchar: 0;
+            value "prop.skip_pager" uchar: 0;
+            value "prop.skip_taskbar" uchar: 0;
+            value "prop.skip_winlist" uchar: 0;
+            value "prop.sticky" uchar: 0;
+            value "prop.w" int: 0;
+            value "prop.zone" int: 0;
+            value "role" string: "console";
+            value "title" string: "Error Console";
             value "transient" uchar: 0;
             value "type" int: 8;
         }
@@ -2052,7 +2111,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 137;
+            value "prop.h" int: 161;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 100;
@@ -2080,10 +2139,10 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 1;
-            value "prop.pos_h" int: 137;
-            value "prop.pos_w" int: 383;
+            value "prop.pos_h" int: 161;
+            value "prop.pos_w" int: 502;
             value "prop.pos_x" int: 415;
-            value "prop.pos_y" int: 338;
+            value "prop.pos_y" int: 228;
             value "prop.res_x" int: 1366;
             value "prop.res_y" int: 768;
             value "prop.shaded" uchar: 50;
@@ -2091,7 +2150,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 383;
+            value "prop.w" int: 502;
             value "prop.zone" int: 0;
             value "transient" uchar: 0;
             value "type" int: 7;
@@ -2220,7 +2279,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 0;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 398;
+            value "prop.h" int: 427;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -2248,7 +2307,7 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 398;
+            value "prop.pos_h" int: 427;
             value "prop.pos_w" int: 351;
             value "prop.pos_x" int: 905;
             value "prop.pos_y" int: 164;
