e.cfg: more notifications cleanup keys

--- a/e/e.cfg
+++ b/e/e.cfg
@@ -790,7 +790,7 @@ group "E_Config" struct {
             value "context" int: 9;
             value "key" string: "Pause";
             value "modifiers" int: 2;
-            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Cleanup double:2.0";
+            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Cleanup double:2.0 uint32:0";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "screen_send_to";
@@ -823,6 +823,14 @@ group "E_Config" struct {
             value "key" string: "F4";
             value "modifiers" int: 3;
             value "params" string: "3";
+        }
+        group "E_Config_Binding_Key" struct {
+            value "action" string: "exec";
+            value "any_mod" uchar: 0;
+            value "context" int: 9;
+            value "key" string: "Pause";
+            value "modifiers" int: 4;
+            value "params" string: "dbus-send --type=method_call --dest=org.freedesktop.Notifications /org/freedesktop/Notifications org.freedesktop.Notifications.Cleanup double:0 uint32:1";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "shot";
@@ -1938,7 +1946,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 394;
+            value "prop.h" int: 668;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -1966,10 +1974,10 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 419;
-            value "prop.pos_w" int: 1372;
+            value "prop.pos_h" int: 693;
+            value "prop.pos_w" int: 1366;
             value "prop.pos_x" int: 0;
-            value "prop.pos_y" int: 0;
+            value "prop.pos_y" int: 75;
             value "prop.res_x" int: 1366;
             value "prop.res_y" int: 768;
             value "prop.shaded" uchar: 0;
@@ -1977,7 +1985,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 1370;
+            value "prop.w" int: 1364;
             value "prop.zone" int: 0;
             value "role" string: "browser";
             value "transient" uchar: 0;
@@ -2111,7 +2119,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 161;
+            value "prop.h" int: 455;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 100;
@@ -2139,8 +2147,8 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 1;
-            value "prop.pos_h" int: 161;
-            value "prop.pos_w" int: 502;
+            value "prop.pos_h" int: 455;
+            value "prop.pos_w" int: 626;
             value "prop.pos_x" int: 415;
             value "prop.pos_y" int: 228;
             value "prop.res_x" int: 1366;
@@ -2150,7 +2158,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 502;
+            value "prop.w" int: 626;
             value "prop.zone" int: 0;
             value "transient" uchar: 0;
             value "type" int: 7;
