--- a/e/e.cfg
+++ b/e/e.cfg
@@ -1864,8 +1864,8 @@ group "E_Config" struct {
             value "prop.offer_resistance" uchar: 0;
             value "prop.pos_h" int: 357;
             value "prop.pos_w" int: 415;
-            value "prop.pos_x" int: 13;
-            value "prop.pos_y" int: 61;
+            value "prop.pos_x" int: 15;
+            value "prop.pos_y" int: 54;
             value "prop.res_x" int: 1366;
             value "prop.res_y" int: 768;
             value "prop.shaded" uchar: 0;
@@ -1946,7 +1946,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 668;
+            value "prop.h" int: 861;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -1974,10 +1974,10 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 693;
-            value "prop.pos_w" int: 1366;
+            value "prop.pos_h" int: 886;
+            value "prop.pos_w" int: 1378;
             value "prop.pos_x" int: 0;
-            value "prop.pos_y" int: 75;
+            value "prop.pos_y" int: 16;
             value "prop.res_x" int: 1366;
             value "prop.res_y" int: 768;
             value "prop.shaded" uchar: 0;
@@ -1985,7 +1985,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 1364;
+            value "prop.w" int: 1376;
             value "prop.zone" int: 0;
             value "role" string: "browser";
             value "transient" uchar: 0;
@@ -2119,7 +2119,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 1;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 455;
+            value "prop.h" int: 161;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 100;
@@ -2147,8 +2147,8 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 1;
-            value "prop.pos_h" int: 455;
-            value "prop.pos_w" int: 626;
+            value "prop.pos_h" int: 161;
+            value "prop.pos_w" int: 502;
             value "prop.pos_x" int: 415;
             value "prop.pos_y" int: 228;
             value "prop.res_x" int: 1366;
@@ -2158,7 +2158,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 626;
+            value "prop.w" int: 502;
             value "prop.zone" int: 0;
             value "transient" uchar: 0;
             value "type" int: 7;
@@ -2278,7 +2278,7 @@ group "E_Config" struct {
         group "E_Remember" struct {
             value "apply" int: 19;
             value "apply_first_only" uchar: 0;
-            value "class" string: "_config::_border_remember_dialog";
+            value "class" string: "_config::_border_locks_dialog";
             value "keep_settings" uchar: 0;
             value "match" int: 51;
             value "max_score" int: 0;
@@ -2287,7 +2287,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 0;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 427;
+            value "prop.h" int: 352;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 0;
@@ -2315,8 +2315,64 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 427;
-            value "prop.pos_w" int: 351;
+            value "prop.pos_h" int: 352;
+            value "prop.pos_w" int: 268;
+            value "prop.pos_x" int: 516;
+            value "prop.pos_y" int: 256;
+            value "prop.res_x" int: 1366;
+            value "prop.res_y" int: 768;
+            value "prop.shaded" uchar: 0;
+            value "prop.skip_pager" uchar: 0;
+            value "prop.skip_taskbar" uchar: 0;
+            value "prop.skip_winlist" uchar: 0;
+            value "prop.sticky" uchar: 0;
+            value "prop.w" int: 268;
+            value "prop.zone" int: 0;
+            value "transient" uchar: 1;
+            value "type" int: 7;
+        }
+        group "E_Remember" struct {
+            value "apply" int: 19;
+            value "apply_first_only" uchar: 0;
+            value "class" string: "_config::_border_remember_dialog";
+            value "keep_settings" uchar: 0;
+            value "match" int: 51;
+            value "max_score" int: 0;
+            value "name" string: "E";
+            value "no_reopen" int: 0;
+            value "prop.desk_x" int: 0;
+            value "prop.desk_y" int: 0;
+            value "prop.fullscreen" uchar: 0;
+            value "prop.h" int: 201;
+            value "prop.head" int: 0;
+            value "prop.icon_preference" uchar: 0;
+            value "prop.layer" int: 0;
+            value "prop.lock_border" uchar: 0;
+            value "prop.lock_client_desk" uchar: 0;
+            value "prop.lock_client_fullscreen" uchar: 0;
+            value "prop.lock_client_iconify" uchar: 0;
+            value "prop.lock_client_location" uchar: 0;
+            value "prop.lock_client_maximize" uchar: 0;
+            value "prop.lock_client_shade" uchar: 0;
+            value "prop.lock_client_size" uchar: 0;
+            value "prop.lock_client_stacking" uchar: 0;
+            value "prop.lock_client_sticky" uchar: 0;
+            value "prop.lock_close" uchar: 0;
+            value "prop.lock_focus_in" uchar: 0;
+            value "prop.lock_focus_out" uchar: 0;
+            value "prop.lock_life" uchar: 0;
+            value "prop.lock_user_desk" uchar: 0;
+            value "prop.lock_user_fullscreen" uchar: 0;
+            value "prop.lock_user_iconify" uchar: 0;
+            value "prop.lock_user_location" uchar: 0;
+            value "prop.lock_user_maximize" uchar: 0;
+            value "prop.lock_user_shade" uchar: 0;
+            value "prop.lock_user_size" uchar: 0;
+            value "prop.lock_user_stacking" uchar: 0;
+            value "prop.lock_user_sticky" uchar: 0;
+            value "prop.offer_resistance" uchar: 0;
+            value "prop.pos_h" int: 201;
+            value "prop.pos_w" int: 173;
             value "prop.pos_x" int: 905;
             value "prop.pos_y" int: 164;
             value "prop.res_x" int: 1366;
@@ -2326,7 +2382,7 @@ group "E_Config" struct {
             value "prop.skip_taskbar" uchar: 0;
             value "prop.skip_winlist" uchar: 0;
             value "prop.sticky" uchar: 0;
-            value "prop.w" int: 351;
+            value "prop.w" int: 173;
             value "prop.zone" int: 0;
             value "transient" uchar: 1;
             value "type" int: 7;
@@ -7318,6 +7374,62 @@ group "E_Config" struct {
         group "E_Remember" struct {
             value "apply" int: 19;
             value "apply_first_only" uchar: 0;
+            value "class" string: "_window_props";
+            value "keep_settings" uchar: 0;
+            value "match" int: 51;
+            value "max_score" int: 0;
+            value "name" string: "E";
+            value "no_reopen" int: 0;
+            value "prop.desk_x" int: 0;
+            value "prop.desk_y" int: 0;
+            value "prop.fullscreen" uchar: 0;
+            value "prop.h" int: 358;
+            value "prop.head" int: 0;
+            value "prop.icon_preference" uchar: 0;
+            value "prop.layer" int: 0;
+            value "prop.lock_border" uchar: 0;
+            value "prop.lock_client_desk" uchar: 0;
+            value "prop.lock_client_fullscreen" uchar: 0;
+            value "prop.lock_client_iconify" uchar: 0;
+            value "prop.lock_client_location" uchar: 0;
+            value "prop.lock_client_maximize" uchar: 0;
+            value "prop.lock_client_shade" uchar: 0;
+            value "prop.lock_client_size" uchar: 0;
+            value "prop.lock_client_stacking" uchar: 0;
+            value "prop.lock_client_sticky" uchar: 0;
+            value "prop.lock_close" uchar: 0;
+            value "prop.lock_focus_in" uchar: 0;
+            value "prop.lock_focus_out" uchar: 0;
+            value "prop.lock_life" uchar: 0;
+            value "prop.lock_user_desk" uchar: 0;
+            value "prop.lock_user_fullscreen" uchar: 0;
+            value "prop.lock_user_iconify" uchar: 0;
+            value "prop.lock_user_location" uchar: 0;
+            value "prop.lock_user_maximize" uchar: 0;
+            value "prop.lock_user_shade" uchar: 0;
+            value "prop.lock_user_size" uchar: 0;
+            value "prop.lock_user_stacking" uchar: 0;
+            value "prop.lock_user_sticky" uchar: 0;
+            value "prop.offer_resistance" uchar: 0;
+            value "prop.pos_h" int: 358;
+            value "prop.pos_w" int: 284;
+            value "prop.pos_x" int: 541;
+            value "prop.pos_y" int: 219;
+            value "prop.res_x" int: 1366;
+            value "prop.res_y" int: 768;
+            value "prop.shaded" uchar: 0;
+            value "prop.skip_pager" uchar: 0;
+            value "prop.skip_taskbar" uchar: 0;
+            value "prop.skip_winlist" uchar: 0;
+            value "prop.sticky" uchar: 0;
+            value "prop.w" int: 284;
+            value "prop.zone" int: 0;
+            value "transient" uchar: 1;
+            value "type" int: 7;
+        }
+        group "E_Remember" struct {
+            value "apply" int: 19;
+            value "apply_first_only" uchar: 0;
             value "class" string: "xkbswitch_config_add_dialog";
             value "keep_settings" uchar: 0;
             value "match" int: 51;
@@ -8231,7 +8343,7 @@ group "E_Config" struct {
             value "prop.desk_x" int: 3;
             value "prop.desk_y" int: 0;
             value "prop.fullscreen" uchar: 0;
-            value "prop.h" int: 744;
+            value "prop.h" int: 743;
             value "prop.head" int: 0;
             value "prop.icon_preference" uchar: 0;
             value "prop.layer" int: 100;
@@ -8259,8 +8371,8 @@ group "E_Config" struct {
             value "prop.lock_user_stacking" uchar: 0;
             value "prop.lock_user_sticky" uchar: 0;
             value "prop.offer_resistance" uchar: 0;
-            value "prop.pos_h" int: 744;
-            value "prop.pos_w" int: 1364;
+            value "prop.pos_h" int: 768;
+            value "prop.pos_w" int: 1366;
             value "prop.pos_x" int: 0;
             value "prop.pos_y" int: 0;
             value "prop.res_x" int: 1366;
