--- a/e/systemd/user/logtail_notify.service
+++ b/e/systemd/user/logtail_notify.service
@@ -1,3 +1,6 @@
+[Unit]
+After=X.target
+
 [Service]
 SyslogIdentifier=%p
 ExecStart=/usr/bin/env logtail_notify -i ${HOME}/media/appz/icons/biohazard_48x.png -x ${XDG_RUNTIME_DIR}/logtail_notify.db /var/log/syslog/stripped.log
